Update contact email

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/shaynimni5-rgb/site-files/blob/main/ShayNimniProjectNum1.sql" class="image fit"><img src="images/ricef.jpg"></a>
+											<a href="https://github.com/shaynimni5-rgb/ShayNimniSite/blob/main/ShayNimniProjectNum1.sql" class="image fit"><img src="images/ricef.jpg"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/shaynimni5-rgb/site-files/blob/main/Project%20Number%202-Shay%20Nimni.sql" class="image fit"><img src="images/light.jpg" alt=""></a>
+											<a href="https://github.com/shaynimni5-rgb/ShayNimniSite/blob/main/Project%20Number%202-Shay%20Nimni%20(2).sql" class="image fit"><img src="images/light.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/shaynimni5-rgb/site-files/blob/main/ShaynimniP3%20(2).ipynb" class="image fit"><img src="images/movie.jpg" alt=""></a>
+											<a href="https://github.com/shaynimni5-rgb/ShayNimniSite/blob/main/ShaynimniP3%20(2)%20(2).ipynb" class="image fit"><img src="images/movie.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/shaynimni5-rgb/ShayNimniSite/blob/main/ShayProject.pbix" class="image fit"><img src="images/parking.jpg" alt=""></a>
@@ -109,17 +109,17 @@
                             <ul class="contact-list" style="list-style: none; padding: 0; margin-top: 1.5em;">
                              <li style="margin-bottom: 1em;">
                              <i class="fa-solid fa-envelope" style="margin-right: 10px; color: #555;"></i>
-                             <a href="mailto:shaynimni@gmail.com" target="_blank">shaynimni@gmail.com</a>
+                             <a href="mailto:shaynimni5@gmail.com" target="_blank">shaynimni5@gmail.com</a>
                         </li>
 
                           <li style="margin-bottom: 1em;">
                           <i class="fa-brands fa-linkedin" style="margin-right: 10px; color: #0077b5;"></i>
-                          <a href="https://www.linkedin.com/in/shaynimni" target="_blank">linkedin.com/in/shaynimni</a>
+                          <a href="https://www.linkedin.com/in/shay-nimni-68a961282/" target="_blank">linkedin.com/in/shaynimni</a>
                        </li>
 
                           <li style="margin-bottom: 1em;">
                           <i class="fa-brands fa-github" style="margin-right: 10px; color: #333;"></i>
-                         <a href="https://github.com/shaynimni" target="_blank">github.com/shaynimni</a>
+                         <a href="https://github.com/shaynimni5-rgb" target="_blank">github.com/shaynimni</a>
                        </li>
                  </ul>
 
